src/objects/fprd__GBL_Dependent_value__c.object
<CustomObject>
	<fields>
        <fullName>Unique_id__c</fullName>
        <externalId>true</externalId>
        <label>Unique_id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fprd__LoV_labels__c</fullName>
        <label>LoV labels</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fprd__LoV_values__c</fullName>
        <label>LoV values</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fprd__Product_configuration__c</fullName>
        <label>Product configuration</label>
        <referenceTo>fprd__GBL_Product_Configuration__c</referenceTo>
        <relationshipLabel>Dependent values</relationshipLabel>
        <relationshipName>Dependent_values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>fprd__Values_control_value__c</fullName>
        <label>Values control value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>List value</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>fprd__Values_control_value__c</columns>
        <columns>fprd__Product_configuration__c</columns>
        <columns>fprd__LoV_labels__c</columns>
        <columns>fprd__LoV_values__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LV-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dependent values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>